[package]
name = "ns_bootcon_gui"
default-run = "ns_bootcon_gui"
version = "0.1.0"
authors = ["Ursus949"]
edition = "2021"

[[bin]]
name = "ns_bootcon_gui"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
whoami = "1.2.1"
local-ip-address = "0.4.8"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[profile.release]
opt-level = 2 # fast and small wasm
strip = true

[patch.crates-io]

